--- a/demos/BRDFViewer.html
+++ b/demos/BRDFViewer.html
@@ -45,6 +45,7 @@
         
         var ambient = new THREE.AmbientLight(0xFFFFFF);
 		scene.add(ambient);
+        scene.fog = new THREE.Fog( 0x000000, 1500, 4000 );
 
         var renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
