--- a/demos/BRDFViewer.html
+++ b/demos/BRDFViewer.html
@@ -30,7 +30,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r80/three.min.js"></script>
     <script src="https://dl.dropboxusercontent.com/u/3587259/Code/Threejs/OrbitControls.js"></script>
-	<script src="../assets/ltc_tables.js" type="text/javascript"></script>
+	<script src="../assets/ltc_ggx.js" type="text/javascript"></script>
     <script src='../lib/DAT.GUI.min.js' type='text/javascript'></script>
 	<script src="../src/js/model.js" type="text/javascript"></script>
 	<script src="../src/js/shader.js" type="text/javascript"></script>
@@ -63,39 +63,7 @@
         var gridHelper = new THREE.GridHelper(25, 50, 0x60F4E1, 0xE7EDEC);
         scene.add(gridHelper);
 
-        // todo: remove ltc stuff
-        /*var ltc_mat_data = new Float32Array(g_ltc_mat);
-        var ltc_mat_tex = new THREE.DataTexture(ltc_mat_data, 64, 64, THREE.RGBAFormat, THREE.FloatType);
-        ltc_mat_tex.minFilter = THREE.NearestFilter;
-        ltc_mat_tex.magFilter = THREE.LinearFilter;
-        ltc_mat_tex.wrapS = THREE.ClampToEdgeWrapping;
-        ltc_mat_tex.wrapT = THREE.ClampToEdgeWrapping;
-        ltc_mat_tex.needsUpdate = true;
-
-        var ltc_amp_data = new Float32Array(g_ltc_mag);
-        var ltc_amp_tex = new THREE.DataTexture(ltc_amp_data, 64, 64, THREE.AlphaFormat, THREE.FloatType);
-        ltc_amp_tex.minFilter = THREE.NearestFilter;
-        ltc_amp_tex.magFilter = THREE.LinearFilter;
-        ltc_amp_tex.wrapS = THREE.ClampToEdgeWrapping;
-        ltc_amp_tex.wrapT = THREE.ClampToEdgeWrapping;
-        ltc_amp_tex.needsUpdate = true;*/
-
-        /*var ltcMaterial = new Shader("ltc", "ltc", {
-            shading_light : {type: 'v3', value: new THREE.Vector3(5.0, 20.0, 20.0)},
-            shading_intensity : {type: 'v3', value: new THREE.Vector3(0.5, 0.5, 0.5)},
-            shading_color : {type: 'v3', value: new THREE.Vector3(0.2, 0.2, 1.0)},
-            roughness : {type: 'f', value: 0.3 },
-            theta : {type: 'f', value: Math.PI / 4},
-            F0 : {type: 'f', value: 0.1 },
-            plotLog : {type: 'f', value: 0.0 },
-            ltc_Minv : {type: 't', value: ltc_mat_tex },
-            ltc_Amp : {type: 't', value: ltc_amp_tex }
-        });*/
-
-        //var sphereLTC = new THREE.Mesh(sphereGeometry, ltcMaterial.material);
-        //scene.add(sphereLTC);
-
-        var sphereFunc = function(u, v) {
+                var sphereFunc = function(u, v) {
             var phi = v * 2 * Math.PI ;
             var theta = u * Math.PI;
 
@@ -135,6 +103,38 @@
         var BlinnPhongSphere    = new THREE.Mesh(sphereGeometry, BlinnPhongMaterial.material);
         scene.add(GGXSmithSphere);
 
+        // todo: remove ltc stuff
+        var ltc_mat_data = new Float32Array(g_ggx_Minv);
+        var ltc_mat_tex = new THREE.DataTexture(ltc_mat_data, 64, 64, THREE.RGBAFormat, THREE.FloatType);
+        ltc_mat_tex.minFilter = THREE.NearestFilter;
+        ltc_mat_tex.magFilter = THREE.LinearFilter;
+        ltc_mat_tex.wrapS = THREE.ClampToEdgeWrapping;
+        ltc_mat_tex.wrapT = THREE.ClampToEdgeWrapping;
+        ltc_mat_tex.needsUpdate = true;
+
+        var ltc_amp_data = new Float32Array(g_ggx_Mag);
+        var ltc_amp_tex = new THREE.DataTexture(ltc_amp_data, 64, 64, THREE.AlphaFormat, THREE.FloatType);
+        ltc_amp_tex.minFilter = THREE.NearestFilter;
+        ltc_amp_tex.magFilter = THREE.LinearFilter;
+        ltc_amp_tex.wrapS = THREE.ClampToEdgeWrapping;
+        ltc_amp_tex.wrapT = THREE.ClampToEdgeWrapping;
+        ltc_amp_tex.needsUpdate = true;
+
+        var ltcMaterial = new Shader("ltc", "basic", {
+            shading_light : {type: 'v3', value: new THREE.Vector3(5.0, 20.0, 20.0)},
+            shading_intensity : {type: 'v3', value: new THREE.Vector3(0.5, 0.5, 0.5)},
+            shading_color : {type: 'v3', value: new THREE.Vector3(0.2, 0.2, 1.0)},
+            roughness : {type: 'f', value: 0.3 },
+            theta : {type: 'f', value: Math.PI / 4},
+            F0 : {type: 'f', value: 0.1 },
+            plotLog : {type: 'f', value: 0.0 },
+            ltc_Minv : {type: 't', value: ltc_mat_tex },
+            ltc_Amp : {type: 't', value: ltc_amp_tex }
+        });
+
+        var sphereLTC = new THREE.Mesh(sphereGeometry, ltcMaterial.material);
+        //scene.add(sphereLTC);
+
         function updateScene()
         {
         }
@@ -154,6 +154,8 @@
         }
 
         var prev;
+        var displayedObject = prev;
+        var hangingObject = sphereLTC;
         function setupGUI() {
             var brdfTypes = { GGXSmith: 0, Beckmann: 1, DisneyDiffuse: 2, Phong: 3, BlinnPhong: 4};
             var brdfList = [GGXSmithSphere, BeckmannSphere, DisneyDiffuseSphere, PhongSphere, BlinnPhongSphere];
@@ -161,6 +163,7 @@
             var updateUniforms = function(param, obj) {
                 for (var i = 0; i < brdfList.length; i++) {
                     brdfList[i].material.uniforms[param] = obj;
+                    sphereLTC.material.uniforms[param] = obj;
                 }
             };
 
@@ -172,7 +175,14 @@
                 phi: 2 * Math.PI,
                 theta: Math.PI / 4.0,
                 F0: 0.1,
-                plotLog: false
+                plotLog: false,
+                switchPlots: function() {
+                    scene.remove(displayedObject);
+                    scene.add(hangingObject);
+                    var temp = displayedObject;
+                    displayedObject = hangingObject;
+                    hangingObject = temp;
+                }
             }
 
             gui.add(params, 'brdf', brdfTypes).onChange(function(b) {
@@ -185,11 +195,6 @@
                 updateUniforms("roughness", {type: 'f', value: r });
             });
 
-            // gui.add(params, "phi", 0.0, 2.0 * Math.PI).onChange(function(p) {
-                // sphere.material.uniforms["phi"] = {type: 'f', value: p };
-                // sphereLTC.material.uniforms["phi"] = {type: 'f', value: p };
-            // });
-
             gui.add(params, "theta", 0.0, Math.PI / 2.0).onChange(function(t) {
                 updateUniforms("theta", {type: 'f', value: t });
             });
@@ -201,6 +206,8 @@
             gui.add(params, "plotLog").onChange(function(p) {
                 updateUniforms("plotLog", {type: 'f', value: ( (p) ? 1.0 : 0.0) });
             });
+
+            gui.add(params, "switchPlots");
         }
 
         setupGUI();
